# cetech

./: .externals.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  HISTORY.md  LICENSE.md  README.md  TODO.md  Vagrantfile  build.py  build.py.TODO  cetech.sln  docker-compose.build.yml  docker-compose.yml  external.py  externals.py  externals.yml  litelog.py  log.yml  log_view.py  logformat.yaml  logview.py  make.py  makefile  mkdocs.yml  playground.py  requirements.txt
Breeze/: index.theme
CELib/: LogHandler.cs
CELib/Properties/: AssemblyInfo.cs
CETech/: Program.cs
CETech/Application/: Application.cs
CETech/FileSystem/: FileSystem.cs
CETech/Input/: Keyboard.cs  Mouse.cs
CETech/Lua/: LuaEnviroment.cs  LuaResource.cs
CETech/PackageManager/: PackageManager.cs  PackageResource.cs
CETech/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CETech/RenderSystem/: RenderSystem.cs
CETech/ResourceCompiler/: ResourceCompiler.cs
CETech/ResourceManager/: ResourceManager.cs  StringId.cs
CETech/TaskManager/: TaskManager.cs
CETech/Utils/: ByteUtils.cs  LogHandler.cs
CETech/Window/: Window.cs  WindowFlags.cs  WindowPos.cs
LibreOffice_Breeze/: README.md
cebase/: README.md
cebase/scripts/: externals.py
celib/: README.md
celib/scripts/: externals.py
core/: core.package  default.dock_layout  default.render_config
core/bgfxshaders/: common.sh
core/cetech/: api_system.lua  application.lua  camera.lua  component.lua  entity.lua  gamepad.lua  hashlib.lua  keyboard.lua  level.lua  material.lua  mesh.lua  module.lua  mouse.lua  package.lua  renderer.lua  resource.lua  scenegraph.lua  transform.lua  world.lua
core/core/: class.lua  core.package  core.yml  cube.entity  cube.material  cube.yml  cube_material.yml  default.dock_layout  fpscamera.lua
core/playground/: assetview_boot.lua  boot.lua  camera.entity  camera.unit  cube.entity  cube.material  cube.scene  editor_input.lua  editor_mouse.lua  empty_boot.lua  leveleditor_boot.lua
data/: .gitignore
data/src/: M4A1.FBX  M4A1.FBX.imported  boot.package  box1.unit  box2.unit  camera.unit  config.yaml  cube.mesh  cube.scene  duck.material  duck.scene  duckCM.texture  fs_shader1.sc  global.config  level1.level  m4_diff.texture  m4a1.scene  m4a1.unit  material1.material  material2.material  pkg1.package  shader1.shader  texture2.texture  unit1.unit  unit10.unit  unit11.unit  varying.def.sc  vs_shader1.sc
develop_bar/: Cetech1.mm
docs/: Cetech1.mm  architecture.md.html  image_history.md  index.html  index.md  index.md.html  install.md  lua_api.md
docs/about/: 3rdparty.md  license.md  release-notes.md
docs/architecture/: overview.md
docs/basic/: mkdocs.yml
docs/engine/: build.md  overview.md  resource.md
docs/examples/: 00-minimal.md
docs/img/: package_resource.graphml  playground_architecture.graphml  resource_pipeline.graphml
docs/lua_api/: Application.md  Camera.md  Entity.md  Gamepad.md  Keyboard.md  Log.md  Mat44f.md  Material.md  Mesh.md  Mouse.md  Package.md  PackageManager.md  Quatf.md  Renderer.md  Transform.md  Unit.md  Vec2f.md  Vec3f.md  Vec4f.md  World.md  mkdocs.yml
docs/playground/: image_history.md  overview.md
engine/: .gitignore  clean.bat  makefile  premake5.lua  vs2013.bat  vs2015.bat
engine/core/: core.package
engine/doc/: Doxyfile  lua_api.md
engine/scripts/: genie.lua  linux.mk  uncrustify.cfg  windows.mk
engine/src/: application.cc  application.h  array.h  console_server.cc  container_types.h  develop_manager.cc  develop_manager.h  device.cc  device.h  entitymanager.h  entitymanager_types.h  hash.h  main.cc  math_types.h  memory.cc  memory.h  memory_types.h  murmur_hash.cc  murmur_hash.h  package_manager.cc  queue.h  resource_manager.cc  resource_manager.h  static_module.h  task_manager.cc  task_manager.h  tests_main.cc
engine/test/: conftest.py
engine/tests/: test_array.cc  test_entitymanager.cc  test_murmur_hash.cc  test_utils.h  test_vector2.cc  utils.h
examples/00-minimal/: README.md
examples/develop/: .gitignore  README.md
examples/module_example/: example.c  example.cpp
playground/: .gitignore  logging.yaml  playground.py  playground_frontend.py  playground_run.py
playground/html/: ace.d.ts  app.js  app.js.map  console.html  console.js  console2.html  console_app.js  console_app.js.map  console_app.ts  console_app2.js  console_app2.js.map  console_app2.ts  editor.html  editor.js  js-yaml.min.js  msgpack.min.js  profiler.html  profiler.js  profiler2.html  profiler_app.js  profiler_app.ts  script_editor.html  script_editor.js  script_editor.js.map  script_editor.ts  smoothie.js  tsconfig.json
playground/templates/: minimal.yaml
playground/ui/: addexistingdialog.ui  assetbrowser.ui  logwidget.ui  luaeditorwindow.ui  mainwindow.ui  profilerwidget.ui  projectmanagerdialog.ui  recordeventswidget.ui  scripteditor.ui  scripteditorwindow.ui
scripts/: Doxyfile  blobinator.py  build.py  celib.lua  cetech.lua  corelib.lua  dev_requirements.txt  docemall.py  externals.py  ffifoo.py  genie.lua  kill_zombie.sh  litelog.py  loggrep.py  mkdocs.yml  requirements.txt  run.py  tool_doc.lua  tool_hash.lua  toolchain.lua  uncrustify.cfg
scripts/blobs/: blob.h  c_blob.h
scripts/dockemall/: module.md
scripts/templates/: blob.h
sources/: tests_main.cc
sources.old/old_csharp_engine/: Program.cs
sources/CELib/: CELib.csproj  Log.cs  LogHandler.cs  packages.config
sources/CETech/: App.config  Application.cs  CETech.csproj  CETech.sh  CETechDevelop.sh  DebuggerShim.cs  Keyboard.cs  Log.cs  LogHandler.cs  MainForm.Designer.cs  MainForm.cs  Mouse.cs  Program.cs  TestProgram.cs  WindowFlags.cs  WindowPos.cs  genie.lua  packages.config
sources/celib/: types.h
sources/cetech/: main.c  plugin_example.c
src/celib/: allocator.h  api.h  api_system.h  array.h  array.inl  bagraph.h  bounds.h  buffer.inl  cdb.h  cdb_yaml.h  celib_types.h  config.h  core.h  ebus.h  eventstream.inl  fmath.h  fmath.inl  (+26 more)
toolchain/: Dockerfile
tools/: .gitignore  Makefile  console_server.py  run.py
(+4432 files in other folders)
